--- a/boards/arm/voltage_sensor/voltage_sensor.dts
+++ b/boards/arm/voltage_sensor/voltage_sensor.dts
@@ -35,6 +35,15 @@
 			zephyr,code = <INPUT_KEY_0>;
 		};
 	};
+	aliases {
+		led0 = &led0;
+		led1 = &led1;
+		sw0 = &button0;
+		bootloader-led0 = &led0;
+		mcuboot-button0 = &button0;
+		mcuboot-led0 = &led0;
+		watchdog0 = &wdt0;
+	};
 };
 
 &gpio0 {
@@ -60,5 +69,10 @@
 };
 
 &adc {
+	status = "okay";
+};
+
+zephyr_udc0: &usbd {
+	compatible = "nordic,nrf-usbd";
 	status = "okay";
 };
