--- a/boards/arm/voltage_sensor/voltage_sensor_defconfig
+++ b/boards/arm/voltage_sensor/voltage_sensor_defconfig
@@ -5,10 +5,23 @@ CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52833_QDAA=y
 CONFIG_BOARD_VOLTAGE_SENSOR=y
 
+# Enable MPU
 CONFIG_ARM_MPU=y
+
+# Enable hardware stack protection
 CONFIG_HW_STACK_PROTECTION=y
 
+# Enable RTT
+CONFIG_USE_SEGGER_RTT=y
+
+# enable GPIO
 CONFIG_GPIO=y
-CONFIG_GPIO_AS_PINRESET=y
+
+# enable uart driver
+CONFIG_SERIAL=y
+
+# enable console
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
 
 CONFIG_PINCTRL=y
